--- a/src/main/resources/templates/fragments/account_dropdown.html
+++ b/src/main/resources/templates/fragments/account_dropdown.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="vi">
 <head>
@@ -177,6 +178,27 @@
                         </ul>
                     </nav>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 📩 Confirmation Modal -->
+    <div class="modal fade" id="confirmReadModal" tabindex="-1"
+         aria-labelledby="confirmReadModalLabel" aria-hidden="true"
+         data-bs-backdrop="false" data-bs-keyboard="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="confirmReadModalLabel">Xác nhận đọc thông báo</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Đóng"></button>
+                </div>
+                <div class="modal-body">
+                    Bạn có chắc chắn muốn đánh dấu thông báo này là đã đọc?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
+                    <button type="button" class="btn btn-primary" id="confirmReadButton">Xác nhận</button>
                 </div>
             </div>
         </div>
